added solution after mentor`s review